<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TokenActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/primary"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/ic_logo" />

        <TextView
            android:text="@string/htd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginVertical="12dp"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="100dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvError"
                android:text="@string/failed_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_error"
                android:textColor="@color/white"
                android:padding="12dp"
                android:gravity="center"/>

        </com.google.android.material.card.MaterialCardView>

        <EditText
            android:id="@+id/token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded"
            android:hint="@string/masukkan_token"
            android:inputType="text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:text="@string/masuk"
            app:backgroundTint="@color/secondary"
            android:layout_width="match_parent"
            android:padding="12dp"
            android:background="@drawable/rounded"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>